@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-11-09T00:34:45Z",
-  "count_outdated" : 656,
-  "uniques_outdated" : 140,
+  "timestamp" : "2022-11-09T16:08:18Z",
+  "count_outdated" : 658,
+  "uniques_outdated" : 141,
   "count" : 685,
   "uniques" : 149,
   "views" : [
-    {
-      "timestamp": "2022-10-26T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-10-28T00:00:00Z",
       "count": 2,
