@@ -1,12 +1,7 @@
 {
-  "count": 29,
-  "uniques": 9,
+  "count": 27,
+  "uniques": 8,
   "views": [
-    {
-      "timestamp": "2022-10-26T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-10-28T00:00:00Z",
       "count": 2,
